Bug 786894 - SVG in an active GFX layer is not invalidating properly. Hacky fix for branches only. r=mattwoodrow, a=lsblakk.